--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "webpack": "^2.6.1"
   },
   "scripts": {
-    "build": "node-sass public/assets/styles.scss public/assets/styles.css && webpack",
-    "watch": "browser-sync start -s public/ -f public/ && node-sass public/assets/styles.scss public/assets/styles.css -w && webpack -w"
+    "build":        "node-sass public/assets/styles.scss public/assets/styles.css && webpack",
+    "server":       "browser-sync start -s public/ -f public/",
+    "watch":        "webpack -w",
+    "watch-styles": "node-sass public/assets/styles.scss public/assets/styles.css -w"
   },
   "dependencies": {
     "d3": "^4.9.1"
