--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   "author": "Christoph Lipautz <christoph@lipautz.org>",
   "license": "MIT",
   "devDependencies": {
+    "babel-jest": "^20.0.3",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.12",
+    "jest": "^20.0.4",
     "node-sass": "^4.5.3",
     "webpack": "^2.6.1"
   },
   "scripts": {
-    "build":        "node-sass public/assets/styles.scss public/assets/styles.css && webpack",
-    "server":       "browser-sync start -s public/ -f public/",
-    "watch":        "webpack -w",
-    "watch-styles": "node-sass public/assets/styles.scss public/assets/styles.css -w"
+    "build": "node-sass public/assets/styles.scss public/assets/styles.css && webpack",
+    "server": "browser-sync start -s public/ -f public/",
+    "watch": "webpack -w",
+    "watch-styles": "node-sass public/assets/styles.scss public/assets/styles.css -w",
+    "test": "jest"
   },
   "dependencies": {
     "d3": "^4.9.1"
