--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /npm-debug.log
 /public/assets/bundle.js
 /public/assets/styles.css
+public/assets/data/500000.json
+public/assets/data/5000000.json
